feat: implement comprehensive user management and RBAC system
Add complete user authentication, authorization, and management system
with role-based access control, multi-factor authentication, session
management, and comprehensive audit logging.

Backend Changes:
----------------

Security & Authentication:
- Implement dual JWT token system (access + refresh tokens)
- Add JwtTokenProvider with enhanced token generation and validation
- Create JwtAuthenticationFilter with integrated audit logging
- Remove duplicate JwtRequestFilter (consolidated functionality)
- Add JwtAuthenticationEntryPoint for unauthorized access handling
- Implement SecurityAuditService for comprehensive security event tracking

User Management:
- Extend User entity with security fields (MFA, verification, locking)
- Add validation annotations (@NotBlank, @Email, @Size)
- Create strategic database indexes for performance
- Implement UserRole system with global and project-specific roles
- Add UserRoleEntity for role assignments
- Create UserSecurity entity for security-related data
- Add UserSession entity for session management
- Implement UserStatus enum for account states

Role-Based Access Control (RBAC):
- Define Role entity with RoleScope (GLOBAL, PROJECT)
- Implement hierarchical role system:
  * Global roles: ADMIN, PROJECT_MANAGER, DEVELOPER, VIEWER
  * Project roles: PROJECT_ADMIN, PROJECT_EDITOR, PROJECT_VIEWER
- Add role-based endpoint protection in SecurityConfig
- Configure method-level security with @EnableMethodSecurity

Services & Controllers:
- Enhance AuthService with registration, verification, password reset
- Add UserService for user profile management
- Implement MfaService for two-factor authentication setup/validation
- Create EmailService interface with EmailServiceImpl
- Add SecurityController for security-related endpoints
- Extend AuthController with enhanced authentication flows

DTOs:
- Add request DTOs: RegisterUserRequest, VerifyEmailRequest,
  ResendVerificatio