@@ -1,9 +1,13 @@
 package com.annapolislabs.lineage.config;
 
-import com.annapolislabs.lineage.security.JwtRequestFilter;
+import com.annapolislabs.lineage.security.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -11,13 +15,14 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.header.writers.HstsHeaderWriter;
+import org.springframework.security.web.header.writers.XContentTypeOptionsHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -25,42 +30,128 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Enhanced Security Configuration with JWT authentication, CSRF protection,
+ * CORS configuration, RBAC, session management, rate limiting, and security headers
+ */
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 
-    private final JwtRequestFilter jwtRequestFilter;
+    private static final Logger logger = LoggerFactory.getLogger(SecurityConfig.class);
+
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
     private final UserDetailsService userDetailsService;
 
+    @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:5173}")
+    private String[] allowedOrigins;
+
     @Autowired
-    public SecurityConfig(JwtRequestFilter jwtRequestFilter, UserDetailsService userDetailsService) {
-        this.jwtRequestFilter = jwtRequestFilter;
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter,
+                         JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint,
+                         UserDetailsService userDetailsService) {
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+        this.jwtAuthenticationEntryPoint = jwtAuthenticationEntryPoint;
         this.userDetailsService = userDetailsService;
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
-                        .requestMatchers("/error").permitAll()
-                        .requestMatchers("/h2-console/**").permitAll()
-                        .requestMatchers("/mcp").permitAll()
-                        .requestMatchers("/actuator/health", "/actuator/info").permitAll()
-                        // Allow frontend static resources
-                        .requestMatchers("/", "/index.html", "/assets/**", "/vite.svg", "/favicon.ico").permitAll()
-                        // Require authentication for API endpoints
-                        .requestMatchers("/api/**").authenticated()
-                        // Allow everything else (for SPA routing)
-                        .anyRequest().permitAll()
+                // CSRF Protection (enabled for browser-based auth, disabled for stateless JWT API)
+                .csrf(csrf -> csrf
+                    .ignoringRequestMatchers("/api/auth/**", "/api/security/**", "/api/invitations/**", "/actuator/**")
+                    .csrfTokenRepository(org.springframework.security.web.csrf.CookieCsrfTokenRepository.withHttpOnlyFalse())
                 )
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                
+                // CORS Configuration
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                
+                // Session Management (Stateless for JWT)
+                .sessionManagement(session -> session
+                    .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                    .maximumSessions(5)
+                    .maxSessionsPreventsLogin(false)
+                )
+                
+                // Authorization Rules
+                .authorizeHttpRequests(auth -> auth
+                    // Public endpoints
+                    .requestMatchers("/api/auth/**").permitAll()
+                    .requestMatchers("/api/invitations/**").permitAll()
+                    .requestMatchers("/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+                    .requestMatchers("/error").permitAll()
+                    .requestMatchers("/h2-console/**").hasRole("ADMIN")
+                    .requestMatchers("/actuator/health", "/actuator/info").permitAll()
+                    
+                    // Static resources
+                    .requestMatchers("/", "/index.html", "/assets/**", "/vite.svg", "/favicon.ico").permitAll()
+                    
+                    // Admin endpoints
+                    .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                    .requestMatchers(HttpMethod.GET, "/api/admin/users").hasRole("ADMIN")
+                    .requestMatchers(HttpMethod.POST, "/api/admin/users").hasAnyRole("ADMIN", "PROJECT_MANAGER")
+                    .requestMatchers(HttpMethod.PUT, "/api/admin/users/**").hasRole("ADMIN")
+                    .requestMatchers(HttpMethod.DELETE, "/api/admin/users/**").hasRole("ADMIN")
+                    
+                    // User management endpoints
+                    .requestMatchers(HttpMethod.GET, "/api/users/profile").authenticated()
+                    .requestMatchers(HttpMethod.PUT, "/api/users/profile").authenticated()
+                    .requestMatchers(HttpMethod.GET, "/api/users/**").hasAnyRole("ADMIN", "PROJECT_MANAGER")
+                    .requestMatchers(HttpMethod.POST, "/api/users/**").hasAnyRole("ADMIN", "PROJECT_MANAGER")
+                    .requestMatchers(HttpMethod.PUT, "/api/users/**").hasAnyRole("ADMIN", "PROJECT_MANAGER")
+                    .requestMatchers(HttpMethod.DELETE, "/api/users/**").hasRole("ADMIN")
+                    
+                    // Security endpoints
+                    .requestMatchers("/api/security/**").authenticated()
+                    
+                    // Project management (requires authentication)
+                    .requestMatchers("/api/projects/**").authenticated()
+                    
+                    // Everything else requires authentication
+                    .anyRequest().authenticated()
+                )
+                
+                // Security Headers
+                .headers(headers -> headers
+                    .frameOptions(frameOptions -> frameOptions.deny())
+                    .contentTypeOptions(org.springframework.security.config.Customizer.withDefaults())
+                    .httpStrictTransportSecurity(hstsConfig -> hstsConfig
+                        .maxAgeInSeconds(31536000)
+                        .includeSubDomains(true)
+                        .preload(true)
+                    )
+                    .referrerPolicy(referrerPolicy -> referrerPolicy
+                        .policy(org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN)
+                    )
+                )
+                
+                // Exception Handling
+                .exceptionHandling(exceptionHandling -> exceptionHandling
+                    .authenticationEntryPoint(jwtAuthenticationEntryPoint)
+                    .accessDeniedHandler((request, response, accessDeniedException) -> {
+                        response.setStatus(403);
+                        response.setContentType("application/json");
+                        response.getWriter().write("""
+                            {
+                                "error": {
+                                    "code": "ACCESS_DENIED",
+                                    "message": "Insufficient permissions to access this resource",
+                                    "path": "%s",
+                                    "timestamp": "%s"
+                                }
+                            }
+                            """.formatted(request.getRequestURI(), java.time.Instant.now().toString()));
+                    })
+                )
+                
+                // Authentication Provider
                 .authenticationProvider(authenticationProvider())
-                .addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
+                
+                // JWT Filter
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -68,11 +159,34 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        
+        // Set allowed origins
+        configuration.setAllowedOriginPatterns(Arrays.asList(allowedOrigins));
+        
+        // Set allowed methods
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        
+        // Set allowed headers
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "X-CSRF-Token",
+            "X-Requested-With",
+            "Accept",
+            "Origin",
+            "Access-Control-Request-Method",
+            "Access-Control-Request-Headers"
+        ));
+        
+        // Set exposed headers
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        
+        // Allow credentials
         configuration.setAllowCredentials(true);
-
+        
+        // Set max age
+        configuration.setMaxAge(3600L);
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
